--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="password"></h1>
+    <script src="js/main.js"></script>
+  </body>
 </html>
