--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1 id="password"></h1>
-    <script src="js/main.js"></script>
+    <div class="container">
+      <h1 id="title">Wallstreetbets</h1>
+      <p id="paragraph">
+        il tuo nome Wallstreetbets:<span id="password"></span>
+      </p>
+      <div class="img">
+        <span class="🚀">🚀</span>
+        <span class="💎">💎</span>
+      </div>
+      <div class="img">
+        <img src="./img/wallb.jpg" class="wallb" alt="" />
+        <h1 id="bottom"></h1>
+      </div>
+
+      <script src="./js/main.js"></script>
+    </div>
   </body>
 </html>
